update the source code after downgrading to java 17 for jenkins to be installed